Swagger Update / Invalid Id
Updated swagger.json file. In  Dive & Expedition PUT routes I added a new query which checks to see if the ID we are using to update is valid or not .
