# static/swagger.json
@@ -1,8 +1,8 @@
 {
   "openapi": "3.0.3",
   "info": {
-    "title": "Swagger Petstore - OpenAPI 3.0",
-    "description": "This is a sample MBARI API Server based on the OpenAPI 3.0 specification.  You can find out more about\nSwagger at [https://swagger.io](https://swagger.io).\n\n\n_If you're looking for the Swagger 2.0/OAS 2.0 version of Petstore, then click [here](https://editor.swagger.io/?url=https://petstore.swagger.io/v2/swagger.yaml). Alternatively, you can load via the `Edit > Load Petstore OAS 2.0` menu option!_\n\nSome useful links:\n- [MBARI Website](https://www.mbari.org)\n- [Contact MBARI](https://www.mbari.org/about/connect-with-us/)",
+    "title": "CSUMB MBARI API - OpenAPI 3.0",
+    "description": "This is a sample MBARI API Server based on the OpenAPI 3.0 specification.  You can find out more about\nSwagger at [https://swagger.io](https://swagger.io).\n\n\nSome useful links:\n- [MBARI Website](https://www.mbari.org)\n- [Contact MBARI](https://www.mbari.org/about/connect-with-us/)",
     "termsOfService": "http://swagger.io/terms/",
     "contact": {
       "email": "apiteam@swagger.io"
@@ -58,17 +58,6 @@
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/Expedition"
-              },
-              "example": {
-                "ExpeditionID": 1001,
-                "DeviceID": 2,
-                "ShipName": "Ship1",
-                "ShipSeqNum": 1,
-                "Purpose": "Purpose is to do am update test",
-                "StatCode": "TestStatCode: 3000",
-                "OtherComments": "Swagger Is Being updated even more as i type this.",
-                "UpdatedBy": "Team 7 Member : Fabian Santano",
-                "ismodified": 1
               }
             }
           },
@@ -76,14 +65,10 @@
         },
         "responses": {
           "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Expedition"
-                }
-              }
-            }
+            "description": "Successful operation"
+          },
+          "400": {
+            "description": "Invalid ID"
           },
           "500": {
             "description": "error"
@@ -123,14 +108,10 @@
         },
         "responses": {
           "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Dive"
-                }
-              }
-            }
+            "description": "Successful operation"
+          },
+          "400": {
+            "description": "Invalid ID"
           },
           "500": {
             "description": "error"
